--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snowify",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "A Spotify-like desktop music player that streams from free sources",
   "main": "src/main.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "electron-builder": "^26.7.0"
   },
   "dependencies": {
+    "@xhayper/discord-rpc": "^1.3.0",
     "ytmusic-api": "^5.3.1"
   },
   "build": {
@@ -31,18 +32,34 @@
     "productName": "Snowify",
     "icon": "assets/logo.png",
     "linux": {
-      "target": ["AppImage"],
+      "target": [
+        "AppImage"
+      ],
       "category": "Audio",
       "icon": "assets/logo.png",
       "extraResources": [
-        { "from": "bin/linux", "to": "bin/linux", "filter": ["yt-dlp"] }
+        {
+          "from": "bin/linux",
+          "to": "bin/linux",
+          "filter": [
+            "yt-dlp"
+          ]
+        }
       ]
     },
     "win": {
-      "target": ["nsis"],
+      "target": [
+        "nsis"
+      ],
       "icon": "assets/logo.ico",
       "extraResources": [
-        { "from": "bin/win", "to": "bin/win", "filter": ["yt-dlp.exe"] }
+        {
+          "from": "bin/win",
+          "to": "bin/win",
+          "filter": [
+            "yt-dlp.exe"
+          ]
+        }
       ]
     },
     "files": [
