--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@xhayper/discord-rpc": "^1.3.0",
+    "firebase": "^12.9.0",
     "ytmusic-api": "^5.3.1"
   },
   "build": {
