--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "electron-builder": "^26.7.0"
   },
   "dependencies": {
+    "@stef-0012/synclyrics": "^2.5.10",
     "@xhayper/discord-rpc": "^1.3.0",
     "firebase": "^12.9.0",
     "ytmusic-api": "^5.3.1"
