Revert macOS build support and update README

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,37 +69,8 @@ jobs:
           name: windows-build
           path: dist/*.exe
 
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Download yt-dlp (macOS)
-        run: |
-          mkdir -p bin/mac
-          curl -L -o bin/mac/yt-dlp https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_macos
-          chmod +x bin/mac/yt-dlp
-
-      - name: Build macOS DMG
-        run: npm run build:mac
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload macOS artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-build
-          path: dist/*.dmg
-
   release:
-    needs: [build-linux, build-windows, build-macos]
+    needs: [build-linux, build-windows]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -119,4 +90,3 @@ jobs:
           files: |
             artifacts/linux-build/*
             artifacts/windows-build/*
-            artifacts/macos-build/*
