--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "target": [
         "AppImage"
       ],
+      "artifactName": "${productName}.${ext}",
       "category": "Audio",
       "icon": "assets/logo.png",
       "extraResources": [
